[package]
name = "alertiq"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
env_logger = "0.11.6"
jsonwebtoken = "9.3.0"
log = "0.4.22"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.42.0", features = ["full"] }
dotenv = "0.15.0"
chrono = "0.4"
colored = "2.0"
